phys5v48hw/hw5/hw5MPIOMPOut.txt
nbodyMPIOMP.cc: In function 'int main(int, char**)':
nbodyMPIOMP.cc:195:1: error: 'thread' was not declared in this scope; did you mean 'fread'?
  195 | thread = omp_get_thread_num(); // Unique thread number
      | ^~~~~~
      | fread
nbodyMPIOMP.cc:195:10: error: 'omp_get_thread_num' was not declared in this scope
  195 | thread = omp_get_thread_num(); // Unique thread number
      |          ^~~~~~~~~~~~~~~~~~
nbodyMPIOMP.cc:196:10: error: 'now_int' was not declared in this scope; did you mean 'u_int'?
  196 | gen.seed(now_int ^ (thread * n_ranks + rank)); // Seed the random number generator
      |          ^~~~~~~
      |          u_int
Start
Start
Setup Fin
Setup Fin
Init Cond Fin
Init Cond Fin
Timestep Fin
Timestep Fin
KE Fin
0
5000
5000
8
301
Rank 0
KE Fin
5000
10000
5000
8
301
Else
MPI Red Fin
MPI Red Fin
Total Kinetic Energy = [0, 118231, 8.53735e+06, 1.16407e+08, 8.02343e+07, 7.56557e+07, 7.43098e+07, 7.35223e+07, 7.30941e+07, 7.20957e+07, 7.18485e+07, 7.15124e+07, 7.08935e+07, 7.05948e+07, 7.05717e+07, 7.00831e+07, 6.98251e+07, 6.98088e+07, 6.93943e+07, 6.97136e+07, 6.91833e+07, 6.94001e+07, 6.90471e+07, 6.85461e+07, 6.89668e+07, 6.85015e+07, 6.81261e+07, 6.8729e+07, 6.83641e+07, 6.8326e+07, 6.79248e+07, 6.80619e+07, 6.77483e+07, 6.78938e+07, 6.74783e+07, 6.76947e+07, 6.75051e+07, 6.72677e+07, 6.74861e+07, 6.73536e+07, 6.70141e+07, 6.72847e+07, 6.70704e+07, 6.66891e+07, 6.70615e+07, 6.67475e+07, 6.64352e+07, 6.65983e+07, 6.66137e+07, 6.66443e+07, 6.64104e+07]
Total Kinetic Energy = [0, 59115.4, 4.26867e+06, 5.82033e+07, 4.01171e+07, 3.78278e+07, 3.71549e+07, 3.67611e+07, 3.65471e+07, 3.60479e+07, 3.59242e+07, 3.57562e+07, 3.54468e+07, 3.52974e+07, 3.52859e+07, 3.50415e+07, 3.49125e+07, 3.49044e+07, 3.46971e+07, 3.48568e+07, 3.45916e+07, 3.47e+07, 3.45236e+07, 3.42731e+07, 3.44834e+07, 3.42507e+07, 3.40631e+07, 3.43645e+07, 3.41821e+07, 3.4163e+07, 3.39624e+07, 3.40309e+07, 3.38741e+07, 3.39469e+07, 3.37391e+07, 3.38474e+07, 3.37525e+07, 3.36339e+07, 3.37431e+07, 3.36768e+07, 3.35071e+07, 3.36424e+07, 3.35352e+07, 3.33445e+07, 3.35308e+07, 3.33737e+07, 3.32176e+07, 3.32991e+07, 3.33069e+07, 3.33222e+07, 3.32052e+07]
Runtime = 54.302 s for N = 10000
Out Fin
Fin Fin
Runtime = 54.306 s for N = 10000
Out Fin
Fin Fin

real	0m54.719s
user	1m44.819s
sys	0m0.828s
